...
        android:text="@string/drinking_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_view_date" />

    <EditText
        android:id="@+id/edt_txt_beer_info"
        android:hint="@string/type_your_bee_brewery_and_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_view_drinking_a" />

    <TextView
...
        android:text="@string/add_my_friend_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_view_with" />

    <Button
        android:id="@+id/btn_done"
        android:text="@string/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
...
