<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BeerWithMainActivityFragment">

    <ListView android:id="@+id/beer_with_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/list_item_beer_with_list" />

    <LinearLayout android:id="@+id/empty"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/empty_beer_with_list_message"
            android:textAppearance="?android:textAppearanceLarge"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/add_beer_with_message"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
